# chapi

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  generate_docstring_cache.py  get_sources  pyproject.toml
.github/workflows/: wheels.yml
clipper/minimol/: CMakeLists.txt
fftw/: CMakeLists.txt
fftw3/: CMakeLists.txt
mmdb2/: CMakeLists.txt
packaging/coot_headless_api/: __init__.py  __version__.py
patches/: clipper-cif-cxx20.patch  coot-cmakelists.patch  coot-nanobind-docstrings.patch  fftw3-version-patch.patch
rfftw/: CMakeLists.txt
ssm/: CMakeLists.txt
test/: smoke_test.py
