[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "nanobind",
]
build-backend = "scikit_build_core.build"

[project]
name = "coot_headless_api"
version = "1.3.1"
description = "Headless API for Coot"
authors = [{name = "Jordan Dialpuri"}, {name = "Lucrezia Catapano"}, {name = "Paul Emsley", email = ""}]
license = {text = "GPLv3"}
requires-python = ">=3.9"
dependencies = ["rdkit"]

[tool.scikit-build]
cmake.source-dir = "coot"
cmake.build-type = "Release"
build-dir = "build_wheel"
cmake.targets = ["coot_headless_api", "coot_headless_api_ext_stub"]

wheel.packages = []

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux*"
build-frontend = "build"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"
before-all = [
    "dnf install -y epel-release",
    "dnf install -y gsl-devel libpng-devel zlib-devel cmake ninja-build bzip2 elfutils-devel",
    "MAMBA_ARCH=$(uname -m | sed 's/x86_64/64/; s/aarch64/aarch64/') && curl -Ls https://micro.mamba.pm/api/micromamba/linux-${MAMBA_ARCH}/latest | tar -xvj bin/micromamba",
    "./bin/micromamba create -y -p /opt/rdkit -c conda-forge rdkit librdkit-dev libboost-devel",
    "bash ./get_sources",
]

[tool.cibuildwheel.linux.environment]
BOOST_ROOT = "/opt/rdkit"
Boost_NO_SYSTEM_PATHS = "ON"
CMAKE_PREFIX_PATH = "/opt/rdkit"
CXXFLAGS = "-I/opt/rdkit/include -fPIC"
CFLAGS = "-I/opt/rdkit/include -fPIC"
LDFLAGS = "-L/opt/rdkit/lib -Wl,-rpath,/opt/rdkit/lib"

[tool.cibuildwheel.macos]
before-all = [
    "brew install gsl boost libpng rdkit expat",
    "bash ./get_sources",
]
archs = ["auto"]
environment = { CC = "clang", CXX = "clang++", MACOSX_DEPLOYMENT_TARGET = "15.0" }

