[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "nanobind",
]
build-backend = "scikit_build_core.build"

[project]
name = "coot_headless_api"
version = "1.3.1-rc1"
description = "Headless API for Coot"
authors = [{name = "Jordan Dialpuri", email = "jdialpuri@mrclmb.ac.uk"}, {name = "Lucrezia Catapano", email = "lucrezia@mrclmb.ac.uk"}, {name = "Paul Emsley", email = "pemsley@mrclmb.ac.uk"}]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10"

[tool.scikit-build]
cmake.source-dir = "coot"
cmake.build-type = "Release"
build-dir = "build_wheel"
cmake.targets = ["coot_headless_api", "coot_headless_api_ext_stub"]

wheel.packages = []

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux*"
build-frontend = "build"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"
before-all = [
    "[ -d /project/rdkit-install ] && cp -r /project/rdkit-install /opt/rdkit && echo 'RDKit restored from cache' || true",
    "dnf install -y epel-release",
    "dnf install -y gsl-devel libpng-devel zlib-devel cmake ninja-build bzip2 elfutils-devel boost-devel eigen3-devel cairo-devel doxygen",
    "bash ./get_sources",
    "[ -d /opt/rdkit ] && [ ! -d /project/rdkit-install ] && cp -r /opt/rdkit /project/rdkit-install && echo 'RDKit saved to cache dir' || true",
    "cd coot/api/doxy-sphinx && doxygen coot-api-dox.cfg && cd ../../../",
    "python3 generate_docstring_cache.py"
]

[tool.cibuildwheel.linux.environment]
CMAKE_PREFIX_PATH = "/opt/rdkit"
CXXFLAGS = "-I/opt/rdkit/include -fPIC"
CFLAGS = "-I/opt/rdkit/include -fPIC"
LDFLAGS = "-L/opt/rdkit/lib -Wl,-rpath,/opt/rdkit/lib"

[tool.cibuildwheel.macos]
before-all = [
    "brew install gsl boost libpng rdkit expat doxygen",
    "bash ./get_sources",
    "cd coot/api/doxy-sphinx && doxygen coot-api-dox.cfg && cd ../../../",
    "python3 generate_docstring_cache.py"
]
archs = ["x86_64", "arm64"]
environment = { CC = "clang", CXX = "clang++", MACOSX_DEPLOYMENT_TARGET = "15.0" }

