[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "nanobind",
]
build-backend = "scikit_build_core.build"

[project]
name = "coot_headless_api"
dynamic = ["version"]
description = "Headless API for Coot"
authors = [{name = "Jordan Dialpuri", email = "jdialpuri@mrclmb.ac.uk"}, {name = "Lucrezia Catapano", email = "lucrezia@mrclmb.ac.uk"}, {name = "Paul Emsley", email = "pemsley@mrclmb.ac.uk"}]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10"

[tool.scikit-build]
cmake.source-dir = "coot"
cmake.build-type = "Release"
build-dir = "build_wheel"
cmake.targets = ["coot_headless_api", "coot_headless_api_ext_stub"]

wheel.packages = []

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "packaging/coot_headless_api/__version__.py"
regex = '''__version__\s*=\s*['"](?P<value>[^'"]+)['"]'''

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux*"
build-frontend = "build"
test-command = "python {project}/test/smoke_test.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64:latest"
before-all = [
    "[ -d /host-rdkit-install/rdkit ] && cp -r /host-rdkit-install/rdkit /opt/rdkit && echo 'RDKit restored from cache' || true",
    "dnf install -y epel-release",
    "dnf install -y gsl-devel libpng-devel zlib-devel cmake ninja-build bzip2 elfutils-devel boost-devel eigen3-devel cairo-devel doxygen",
    "bash ./get_sources",
    "[ -d /opt/rdkit ] && [ ! -d /host-rdkit-install/rdkit ] && cp -r /opt/rdkit /host-rdkit-install/rdkit && echo 'RDKit saved to cache dir' || true",
]

[tool.cibuildwheel.linux.environment]
CMAKE_PREFIX_PATH = "/opt/rdkit"
CXXFLAGS = "-I/opt/rdkit/include -fPIC"
CFLAGS = "-I/opt/rdkit/include -fPIC"
LDFLAGS = "-L/opt/rdkit/lib -Wl,-rpath,/opt/rdkit/lib"

[tool.cibuildwheel.macos]
before-all = [
    "brew install gsl boost libpng rdkit expat doxygen",
    "bash ./get_sources",
]
archs = ["auto"]
environment = { CC = "clang", CXX = "clang++", MACOSX_DEPLOYMENT_TARGET = "15.0" }

